Fixed items gap

--- a/style.css
+++ b/style.css
@@ -101,7 +101,8 @@ body {
     display: flex;
     flex-wrap: wrap;
     align-items: flex-start;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 20px;
 }
 
 .item {
